// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/ProfileFlyout renders with all props 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
        role="img"
      >
        <span
          aria-hidden="true"
          className="hig__avatarV2__initials"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="emotion-6"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-4"
      />
    </div>
  </div>
</div>
`;

exports[`profile-flyout/ProfileFlyout renders with no props 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-4 {
  position: relative;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
        role="img"
      >
        <span
          aria-hidden="true"
          className="hig__avatarV2__initials"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="emotion-6"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-4"
      />
    </div>
  </div>
</div>
`;
